# frogger_game_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/: build.yml
.github/workflows/: build.yml
desktop/: CMakeLists.txt  main.cpp  main2.cpp
lib/: INSTALL.md
lib/SDL3_image-3.4.0/i686-w64-mingw32/lib/cmake/SDL3_image/: SDL3_imageConfig.cmake  SDL3_imageConfigVersion.cmake
lib/SDL3_image-3.4.0/i686-w64-mingw32/lib/pkgconfig/: sdl3-image.pc
src/: CMakeLists.txt  Car.cpp  Car.h  Frog.cpp  Frog.h  Game.cpp  Game.h  Input.h  Lane.cpp  Lane.h  game.cpp  game.h
src/game_states/: game_state.h  game_state_manager.cpp  game_state_manager.h  lose_screen.cpp  lose_screen.h  main_game.cpp  main_game.h  main_game_state.cpp  main_game_state.h  start_screen.cpp  start_screen.h  transition.h  win_screen.cpp  win_screen.h
src/objects/: car.cpp  car.h  color.h  count_down_timer.cpp  count_down_timer.h  draw_object_base.h  draw_objects.h  draw_objects_data.h  frog.cpp  lanes.cpp  lanes.h  lives.cpp  night.h  rectangle.h  sdl_context.cpp  sdl_context.h  sprite_object.cpp  sprite_object.h  text_object.cpp  text_object.h
src/objects/draw_objects/: draw_object_base.h  draw_object_rect.cpp  draw_object_rect.h  draw_object_sprite.cpp  draw_object_sprite.h  draw_object_text.cpp  draw_object_text.h
src/objects/game_objects/: car.cpp  car.h  count_down_timer.cpp  count_down_timer.h  frog.cpp  frog.h  lanes.cpp  lanes.h  lives.cpp  lives.h  object_base.h
src2/: CMakeLists.txt  game.cpp  game.h
src2/objects/: car.cpp  draw_objects.h  frog.cpp  frog.h  lanes.cpp  lanes.h  lives.h  night.cpp  object_base.h
